<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@color/secondary_light"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_transaction"
        android:textAlignment="center"
        android:textColor="@color/primary_dark_green"
        android:textSize="24sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout.Green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/transaction_name"
        android:paddingVertical="20dp"
        app:startIconDrawable="@drawable/tag_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textCursorDrawable="@drawable/custom_cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/TextInputLayout.Green"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/amount"
        app:startIconDrawable="@drawable/money_icon">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:textCursorDrawable="@drawable/custom_cursor" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choose_category"
        android:textColor="@color/primary_dark_green"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/category_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/spinner_background"
        android:padding="5dp"
        android:spinnerMode="dialog" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/choose_period"
        android:textColor="@color/primary_dark_green"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/period_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/spinner_background"
        android:padding="5dp"
        android:spinnerMode="dialog" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/background_ripple"
        android:padding="10dp"
        android:text="@string/add"
        app:backgroundTint="@null" />


</LinearLayout>