<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/secondary_light"
    android:padding="20dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textSize="42sp"
        android:textColor="@color/primary_dark_green"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_profile_data"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/primary_dark_green"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="20dp"
        android:hint="@string/name"
        app:startIconDrawable="@android:drawable/ic_menu_edit"
        style="@style/TextInputLayout.Green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_input"
            android:layout_width="match_parent"
            android:inputType="text"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:hint="@string/income_sum"
        app:startIconDrawable="@drawable/money_icon"
        style="@style/TextInputLayout.Green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/income_input"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/saving_sum"
        app:startIconDrawable="@drawable/money_icon"
        style="@style/TextInputLayout.Green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/saving_input"
            android:layout_width="match_parent"
            android:inputType="numberDecimal"
            android:textCursorDrawable="@drawable/custom_cursor"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="*planowana kwota miesięczna oszczędności"
        android:textAlignment="textStart"
        android:layout_gravity="start"
        android:textSize="14sp"
        android:textColor="@color/primary_dark_green"
        />

    <Button
        android:id="@+id/enter_button"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:layout_gravity="center"
        app:backgroundTint="@null"
        android:background="@drawable/rounded_background_orange"
        android:text="@string/enter"
        android:layout_width="125dp"
        android:layout_height="wrap_content" />


</LinearLayout>