<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary_light"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/stat_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="8dp"
            android:backgroundTint="@color/primary_dark_green"
            android:clickable="true"
            android:focusable="true"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/income_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="12dp"
                        android:text="@string/zero_amount"
                        android:textAlignment="textEnd"
                        android:textColor="@color/white"
                        android:textSize="26sp" />

                    <TextView
                        android:id="@+id/spent_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:paddingHorizontal="5dp"
                        android:paddingVertical="12dp"
                        android:text="@string/zero_amount_brackets"
                        android:textAlignment="textStart"
                        android:textColor="@color/light_red"
                        android:textSize="26sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/balance"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:padding="16dp"
                        android:text="@string/balance"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/balance_amount"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:paddingVertical="16dp"
                            android:paddingStart="16dp"
                            android:paddingEnd="5dp"
                            android:text="@string/zero_amount"
                            android:textAlignment="center"
                            android:textColor="@color/primary_light_green"
                            android:textSize="24sp" />

                        <TextView
                            android:id="@+id/balance_percent"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:paddingStart="5dp"
                            android:paddingEnd="16dp"
                            android:text="@string/zero_percentage"
                            android:textAlignment="center"
                            android:textColor="@color/primary_light_green"
                            android:textSize="20sp" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="10dp"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/saving"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:text="@string/savings"
                        android:textAlignment="textStart"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/saving_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="16dp"
                        android:text="@string/zero_amount"
                        android:textAlignment="textEnd"
                        android:textColor="@color/primary_light_green"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/message_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1dp"
                        android:layout_marginHorizontal="10dp"
                        android:background="@color/black" />

                    <TextView
                        android:id="@+id/budget_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/no_transactions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/no_transactions"
            android:textAlignment="center"
            android:textColor="@color/primary_dark_green"
            android:textSize="24sp"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/secondary_orange"
        android:drawableLeft="@drawable/add_icon"
        android:drawableTint="@color/primary_light_green"
        android:padding="10dp"
        android:text="@string/add_transaction"
        android:textColor="@color/primary_light_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="RtlHardcoded" />

</androidx.constraintlayout.widget.ConstraintLayout>